--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "SET NODE_ENV=prod&& nodemon src/index.js",
-    "dev": "SET NODE_ENV=dev&& nodemon src/index.js"
+    "start": "NODE_ENV=prod nodemon src/index.js",
+    "dev": "NODE_ENV=dev nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
