Add flujo de compra

--- a/.env.dev
+++ b/.env.dev
@@ -2,3 +2,5 @@ DB_NAME=postgres
 DB_URL=localhost
 DB_USER=postgres
 DB_PASSWORD=admin
+RAPID_API_KEY='7304510393msh5502a8c51f7577ep1e29dbjsnda57813c473d'
+MP_ACCESS_TOKEN='APP_USR-8672570881834197-020917-f96d171a391e9652d286777adf8f676d-1677193280'
