--- a/.env.prod
+++ b/.env.prod
@@ -2,3 +2,4 @@ DB_NAME=postgres
 DB_URL=db.tdqxxsoeovdeofheblvo.supabase.co
 DB_USER=postgres
 DB_PASSWORD=admintpfinal2023
+RAPID_API_KEY='7304510393msh5502a8c51f7577ep1e29dbjsnda57813c473d'
