--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,5 @@
 DB_NAME=postgres
-DB_URL=db.tdqxxsoeovdeofheblvo.supabase.co
-DB_USER=postgres
+DB_URL=aws-0-us-east-1.pooler.supabase.com
+DB_USER=postgres.tdqxxsoeovdeofheblvo
 DB_PASSWORD=admintpfinal2023
 RAPID_API_KEY='7304510393msh5502a8c51f7577ep1e29dbjsnda57813c473d'
