--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "SET NODE_ENV=production&& node src/index.js",
+    "start": "node src/index.js",
     "dev": "SET NODE_ENV=dev&& nodemon src/index.js"
   },
   "keywords": [],
