--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "NODE_ENV=dev nodemon src/index.js"
-    },
+    "dev": "SET NODE_ENV=dev&& nodemon src/index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
