Add emails notification

--- a/.env.production
+++ b/.env.production
@@ -4,4 +4,6 @@ DB_USER=postgres.tdqxxsoeovdeofheblvo
 DB_PASSWORD=admintpfinal2023
 MP_ACCESS_TOKEN='APP_USR-8672570881834197-020917-f96d171a391e9652d286777adf8f676d-1677193280'
 RAPID_API_KEY='7304510393msh5502a8c51f7577ep1e29dbjsnda57813c473d'
+EMAILJS_PUBLIC_KEY='IUhtEeEGjDMH4HHYm'
+EMAILJS_PRIVATE_KEY='6s5TytM6jU2IeXsk5v7m9'
 COOKIE_DOMAIN='.funkoplanet.online'
