--- a/.env.production
+++ b/.env.production
@@ -7,3 +7,4 @@ RAPID_API_KEY='7304510393msh5502a8c51f7577ep1e29dbjsnda57813c473d'
 EMAILJS_PUBLIC_KEY='IUhtEeEGjDMH4HHYm'
 EMAILJS_PRIVATE_KEY='6s5TytM6jU2IeXsk5v7m9'
 COOKIE_DOMAIN='.funkoplanet.online'
+JWT_SECRET='3FrzjMKRfj9IQabzMoC'
