--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env NODE_ENV=dev node src/index.js"
+    "dev": "SET NODE_ENV=dev&& nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
